Add unlock seed API resource