@@ -44,11 +44,11 @@ class ResolveSalesTest {
         LocalDateTime now = LocalDateTime.now(ZoneOffset.UTC);
         OnSaleSeed onSaleSeed = OnSaleSeed.builder().willBeSoldDate(now).buyPrice(2).sellPrice(3).seedEnum(SeedEnum.BEETS).demand(new Demand(DemandType.VeryHighDemand, 5000)).build();
         HarvestablePlanted harvestablePlanted1 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)) );
+        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)), Collections.emptyList());
         HarvestablePlanted harvestablePlanted2 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2, false)) );
+        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2, false)), Collections.emptyList());
         HarvestablePlanted harvestablePlanted3 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo3 = new UserInfo("3", "greg3.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted3, false)) );
+        var userInfo3 = new UserInfo("3", "greg3.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted3, false)), Collections.emptyList());
         when(userInfoPort.findAll()).thenReturn(List.of(userInfo1, userInfo2, userInfo3));
         when(userInfoPort.countAll()).thenReturn(5L);
 
@@ -58,11 +58,11 @@ class ResolveSalesTest {
         List<UserInfo> value = userInfoCaptor.getValue();
         assertThat(value).containsExactlyInAnyOrder(
                 new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, new HarvestablePlanted(onSaleSeed, now,
-                        new InfoSale(3, 15, 36, 12, true, 36, 12)), false))),
+                        new InfoSale(3, 15, 36, 12, true, 36, 12)), false)), Collections.emptyList()),
                 new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, new HarvestablePlanted(onSaleSeed, now,
-                        new InfoSale(3, 15, 36, 12, true, 36, 12)), false))),
+                        new InfoSale(3, 15, 36, 12, true, 36, 12)), false)), Collections.emptyList()),
                 new UserInfo("3", "greg3.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, new HarvestablePlanted(onSaleSeed, now,
-                        new InfoSale(3, 15, 36, 12, true, 36, 12)), false)))
+                        new InfoSale(3, 15, 36, 12, true, 36, 12)), false)), Collections.emptyList())
         );
     }
 
@@ -71,11 +71,11 @@ class ResolveSalesTest {
         LocalDateTime now = LocalDateTime.now(ZoneOffset.UTC);
         OnSaleSeed onSaleSeed = OnSaleSeed.builder().willBeSoldDate(now).buyPrice(2).sellPrice(3).seedEnum(SeedEnum.BEETS).demand(new Demand(DemandType.VerySmallDemand, 10)).build();
         HarvestablePlanted harvestablePlanted1 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)) );
+        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)), Collections.emptyList());
         HarvestablePlanted harvestablePlanted2 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2, false)) );
+        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2, false)), Collections.emptyList());
         HarvestablePlanted harvestablePlanted3 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo3 = new UserInfo("3", "greg3.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted3, false)) );
+        var userInfo3 = new UserInfo("3", "greg3.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted3, false)), Collections.emptyList());
         when(userInfoPort.findAll()).thenReturn(List.of(userInfo1, userInfo2, userInfo3));
 
         resolveSales.execute(GrowthTime.SECOND_GROWTH_TIME);
@@ -97,10 +97,10 @@ class ResolveSalesTest {
         LocalDateTime now = LocalDateTime.now(ZoneOffset.UTC);
         OnSaleSeed onSaleSeed = OnSaleSeed.builder().willBeSoldDate(now).buyPrice(2).sellPrice(3).seedEnum(SeedEnum.BEETS).demand(new Demand(DemandType.VeryHighDemand, 5000)).build();
         HarvestablePlanted harvestablePlanted1 = new HarvestablePlanted(onSaleSeed, now, new InfoSale(10, 2, 10,10,true,10,10));
-        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)) );
+        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)), Collections.emptyList());
         HarvestablePlanted harvestablePlanted2Zone1 = new HarvestablePlanted(onSaleSeed, now, new InfoSale(10, 2, 10,10,true,10,10));
         HarvestablePlanted harvestablePlanted2Zone2 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2Zone1, false), new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted2Zone2, false)) );
+        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2Zone1, false), new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted2Zone2, false)), Collections.emptyList());
         when(userInfoPort.findAll()).thenReturn(List.of(userInfo1, userInfo2));
         when(userInfoPort.countAll()).thenReturn(1L);
 
@@ -112,7 +112,7 @@ class ResolveSalesTest {
                 new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(
                         new HarvestableZone(HarvestableZoneType.ZONE_1, new HarvestablePlanted(onSaleSeed, now, new InfoSale(10, 2, 10,10,true,10,10)), false),
                         new HarvestableZone(HarvestableZoneType.ZONE_2, new HarvestablePlanted(onSaleSeed, now, new InfoSale(1, 11, 12, 12, true, 36, 12)), false)
-                ))
+                ), Collections.emptyList())
         );
     }
 
@@ -123,12 +123,12 @@ class ResolveSalesTest {
 
         OnSaleSeed onSaleSeed = OnSaleSeed.builder().willBeSoldDate(now.plusMinutes(2)).buyPrice(2).sellPrice(3).seedEnum(SeedEnum.BEETS).demand(new Demand(DemandType.VeryHighDemand, 5000)).build();
         HarvestablePlanted harvestablePlanted1 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)) );
+        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted1, false)), Collections.emptyList());
 
         HarvestablePlanted harvestablePlanted2Zone1 = new HarvestablePlanted(onSaleSeed, now, null);
         OnSaleSeed onSaleSeed2 = OnSaleSeed.builder().willBeSoldDate(now).buyPrice(2).sellPrice(3).seedEnum(SeedEnum.BEETS).demand(new Demand(DemandType.VeryHighDemand, 5000)).build();
         HarvestablePlanted harvestablePlanted2Zone2 = new HarvestablePlanted(onSaleSeed2, now, null);
-        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2Zone1, false), new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted2Zone2, false)) );
+        var userInfo2 = new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_1, harvestablePlanted2Zone1, false), new HarvestableZone(HarvestableZoneType.ZONE_2, harvestablePlanted2Zone2, false)), Collections.emptyList());
 
         when(userInfoPort.findAll()).thenReturn(List.of(userInfo1, userInfo2));
         when(userInfoPort.countAll()).thenReturn(1L);
@@ -143,7 +143,7 @@ class ResolveSalesTest {
                 new UserInfo("2", "greg2.lol@mdr.fr", 200, 0, List.of(
                         new HarvestableZone(HarvestableZoneType.ZONE_1, new HarvestablePlanted(onSaleSeed, now, null), false),
                         new HarvestableZone(HarvestableZoneType.ZONE_2, new HarvestablePlanted(onSaleSeed2, now, new InfoSale(1, 11, 12, 12, true, 36, 12)), false)
-                ))
+                ), Collections.emptyList())
         );
     }
 
@@ -153,7 +153,7 @@ class ResolveSalesTest {
         LocalDateTime now = LocalDateTime.now(ZoneOffset.UTC);
         OnSaleSeed onSaleSeed = OnSaleSeed.builder().willBeSoldDate(now).buyPrice(2).sellPrice(3).seedEnum(SeedEnum.BEETS).demand(new Demand(DemandType.VerySmallDemand, 1)).build();
         HarvestablePlanted harvestablePlanted1 = new HarvestablePlanted(onSaleSeed, now, null);
-        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_5, harvestablePlanted1, false)) );
+        var userInfo1 = new UserInfo("1", "greg.lol@mdr.fr", 200, 0, List.of(new HarvestableZone(HarvestableZoneType.ZONE_5, harvestablePlanted1, false)), Collections.emptyList());
         when(userInfoPort.findAll()).thenReturn(List.of(userInfo1));
         when(userInfoPort.countAll()).thenReturn(1L);
 
